# aoc-rust-2022

./: .gitignore  Cargo.toml  README.md  benchmark.json
.github/workflows/: ci.yml
src/: bench.rs  helpers.rs  lib.rs
src/puzzles/: 01.md  03.md  21.md
